kubernetes/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-r-us-deployment
  namespace: notes-r-us
  labels:
    app: notes-r-us-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-r-us-app

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  template:
    metadata:
      labels:
        app: notes-r-us-app

    spec:
      containers:
      - name: notes-r-us
        image: ghcr.io/l2dit/notesrus:8378afe869749794f8c3270482bc18ef8fbdb674
        ports:
        - containerPort: 3000
