kubernetes/4-deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: hanko-deployment
  namespace: notes-r-us
  lables:
    app: hanko-app

spec:
  replicas: 1
  selector:
    matchLables:
      app: hanko-app

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      # maxUnavailable: 1

  template:
    metadata:
      labels:
        app: hanko-app

    spec:
      containers:
      - name: hanko
        image: ghcr.io/teamhanko/hanko:main
        imagePullPolicy: IfNotPresent

        command:
        - /hanko

        args:
        - serve
        - all
        - '--config'
        - /etc/config/config.yaml

        ports:
        - name: http-public
          containerPort: 8000
          protocol: TCP
        - name: http-admin
          containerPort: 8001
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-r-us-deployment
  namespace: notes-r-us
  labels:
    app: notes-r-us-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-r-us-app

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      # maxUnavailable: 1

  template:
    metadata:
      labels:
        app: notes-r-us-app

    spec:
      containers:
      - name: notes-r-us
        image: ghcr.io/l2dit/notesrus:27cbd44d0762c443065b0f1b95c1d42426889ec1
        ports:
        - containerPort: 3000
