kubernetes/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-service-notes-r-us
  namespace: notes-r-us

spec:
  selector:
    app: notes-r-us-app

  ports:
    - name: http
      targetPort: 3000
      port: 80
