kubernetes/7-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-notes-r-us
  namespace: notes-r-us
  annotations:
    kubernetes.io/ingress.class: traefik-external
    link.argocd.argoproj.io/external-link: 'https://notesrus.nzdev.org/'

spec:
  entryPoints:
  - websecure

  routes:
    - match: Host(`notesrus.nzdev.org`)
      kind: Rule
      services:
        - name: public-service-notes-r-us
          port: 80

  tls:
    secretName: nzdev-org-production-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-auth-notes-r-us
  namespace: notes-r-us
  annotations:
    kubernetes.io/ingress.class: traefik-external
    link.argocd.argoproj.io/external-link: 'https://auth.notesrus.nzdev.org/'

spec: 
  entryPoints:
    - websecure

  routes:
    - match: Host(`auth.notesrus.nzdev.org`)
      kind: Rule
      services:
        - name: public-service-hanko
          port: 80

    - match: Host(`admin.notesrus.nzdev.org`)
      kind: Rule
      services:
        - name: admin-service-hanko
          port: 80

  tls:
    secretName: notesrus-nzdev-org-production-tls
